--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         dan keterampilan pengembangan saya. Setiap proyek memiliki tujuannya sendiri dan 
                         mencerminkan dedikasi saya untuk memberikan solusi teknologi yang inovatif.
                     </p>
-                    <a href="#">View in GitHub <i class='bx bx-link-external'></i></a>
+                    <a href="https://addinrizal.github.io/Personal-Portfolio/">View in GitHub <i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="item">
@@ -149,7 +149,7 @@
                         minimalis dan pengalaman pengguna yang ramah, halaman blog ini memberikan pengguna 
                         akses intuitif ke konten yang relevan dan menarik.
                     </p>
-                    <a href="#">View in GitHub <i class='bx bx-link-external'></i></a>
+                    <a href="https://addinrizal.github.io/L0122003-Addin-TPSOFTDEV24/">View in GitHub <i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="item">
