--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="logo">
             <img src="assets/logo.png">
-            <a href="https://google.com" target="_blank">ADDIN HADI RIZAL</a>
+            <a href="https://google.com" target="_blank">ADDIN RIZAL</a>
         </div>
         <ul>
             <li><a href="#main">Home</a></li>
