--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="item">
                 <img src="assets/sc-2.jpg">
                 <div class="info">
-                    <h4>Simple Blog Page</h4>
+                    <h4>Simple Library Page</h4>
                     <p>
                         Salah satu proyek terbaru yang saya kerjakan adalah pembuatan halaman blog sederhana 
                         yang menonjolkan kejelasan struktur dan kemudahan navigasi. Dengan fokus pada desain 
